--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
   "name": "flip-card-wc",
   "version": "1.0.0",
-  "description": "",
+  "description": "Flip Card Web Component",
   "main": "index.js",
   "scripts": {
+    "start": "concurrently \"npm run scss:watch\"  \"npm run start:build\" \"npm run serve\"",
+    "scss:watch": "node-sass -w -r src/style.scss -o ./src",
+    "start:build": "rollup -w -c rollup.config.js",
+    "serve": "live-server",
+    "build": "rollup -c rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.1.1",
+    "autoprefixer": "^10.2.4",
+    "concurrently": "^5.3.0",
+    "live-server": "^1.2.1",
     "node-sass": "^5.0.0",
+    "postcss": "^8.2.6",
+    "rollup": "^2.38.5",
+    "rollup-plugin-html": "^0.2.1",
+    "rollup-plugin-postcss": "^4.0.0",
     "typescript": "^4.1.5"
   }
 }
