--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "flip-card-wc",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Flip Card Web Component",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
     "start": "concurrently \"npm run scss:watch\"  \"npm run start:build\" \"npm run serve\"",
     "scss:watch": "node-sass -w -r src/style.scss -o ./src",
@@ -11,9 +11,16 @@
     "build": "rollup -c rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+   "web components",
+   "flip card"
+  ],
+  "author": "Jeffrey Quan",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jeffreyquan/flip-card-wc.git"
+  },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.1.1",
     "autoprefixer": "^10.2.4",
