--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.1",
   "description": "Flip Card Web Component",
   "main": "dist/main.js",
+  "types": "./dist/main.d.ts",
   "scripts": {
     "start": "concurrently \"npm run scss:watch\"  \"npm run start:build\" \"npm run serve\"",
     "scss:watch": "node-sass -w -r src/style.scss -o ./src",
     "start:build": "rollup -w -c rollup.config.js",
-    "serve": "live-server",
+    "serve": "live-server ./dist",
     "build": "rollup -c rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-   "web components",
-   "flip card"
+    "web components",
+    "flip card"
   ],
   "author": "Jeffrey Quan",
   "license": "ISC",
@@ -22,7 +23,6 @@
     "url": "https://github.com/jeffreyquan/flip-card-wc.git"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.1.1",
     "autoprefixer": "^10.2.4",
     "concurrently": "^5.3.0",
     "live-server": "^1.2.1",
@@ -31,6 +31,8 @@
     "rollup": "^2.38.5",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "tslib": "^2.1.0",
     "typescript": "^4.1.5"
   }
 }
