--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "web components",
-    "flip card"
+    "web-components",
+    "flip-card",
+    "flip",
+    "card",
+    "component"
   ],
   "author": "Jeffrey Quan",
   "license": "ISC",
