--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flip-card-wc",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "Flip Card Web Component",
   "main": "dist/main.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "rollup": "^2.38.5",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5"
