--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flip-card-wc",
   "version": "1.2.0",
   "description": "Flip Card Web Component",
-  "main": "dist/main.js",
+  "main": "dist/flip-card-wc.js",
   "scripts": {
     "start": "concurrently \"npm run scss:watch\"  \"npm run start:build\" \"npm run serve\"",
     "scss:watch": "node-sass -w -r src/style.scss -o ./src",
